/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/

syntax = "proto3";

package ran.trafficsim.types;

import "gogoproto/gogo.proto";

message Point {
    double lat = 1;

    double lng = 2;
}

message Sector {
    int32 azimuth = 1;

    int32 arc = 2;

    Point centroid = 3;
}

message Route {
    uint64 name = 1 [(gogoproto.customname) = "RouteID", (gogoproto.casttype) = "IMSI"];

    repeated Point waypoints = 2;

    string color = 3;
}

message Ue {
    uint64 imsi = 1 [(gogoproto.customname) = "IMSI", (gogoproto.casttype) = "IMSI"];

    string type = 2;

    Point position = 4;

    uint32 rotation = 5;

    uint64 serving_tower = 7 [(gogoproto.casttype) = "ECGI"];

    double serving_tower_strength = 8;

    uint64 tower1 = 9 [(gogoproto.casttype) = "ECGI"];

    double tower1_strength = 10;

    uint64 tower2 = 11 [(gogoproto.casttype) = "ECGI"];

    double tower2_strength = 12;

    uint64 tower3 = 13 [(gogoproto.casttype) = "ECGI"];

    double tower3_strength = 14;

    uint32 crnti = 15 [(gogoproto.customname) = "CRNTI", (gogoproto.casttype) = "CRNTI"];

    bool admitted = 16;

    UeMetrics metrics = 17;
}

message UeMetrics {
    // Latency (in nanoseconds) of the most recent hand-over
    int64 ho_latency = 1;

    // Handover report timestamp (in nanoseconds since epoch)
    int64 ho_report_timestamp = 2;

    // flag to indicate the first measurement
    bool isFirst = 3;
}

message Cell {
    uint64 ecgi = 1 [(gogoproto.customname) = "ECGI", (gogoproto.casttype) = "ECGI"];

    Point location = 3;

    Sector sector = 4;

    string color = 5;

    uint32 maxUEs = 6;

    repeated uint64 neighbors = 7 [(gogoproto.casttype) = "ECGI"];

    // The cell transmit power in decibels
    double txPowerdB = 8;

    // crntis maps a ue's name to its crnti
    map<uint32, uint64> crntiMap = 9 [(gogoproto.castkey) = "CRNTI", (gogoproto.castvalue) = "IMSI"];

    uint32 crntiIndex = 10;

    uint32 port = 11;
}

message Node {
    uint32 enbid = 1 [(gogoproto.customname) = "EnbID", (gogoproto.casttype) = "EnbID"];

    string address = 2;

    int32 port = 3;
}

message MapLayout {
    // Map center latitude and longitude
    ran.trafficsim.types.Point center = 1;

    // The starting Zoom level
    float zoom = 2;

    // Show map as faded on start
    bool fade = 3;

    // Show routes on start
    bool showRoutes = 4;

    // Show power as circle on start
    bool showPower = 5;

    // Ratio of random locations diameter to tower grid width
    float locationsScale = 9;

    // FIXME: These are deprecated; remove
    // Max number of UEs for complete simulation
    uint32 min_ues = 6;

    // Max number of UEs for complete simulation
    uint32 max_ues = 7;

    // the current number of routes
    uint32 current_routes = 8;

}
